# SciBuilder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  boost.cmake  eigen.cmake  lapack.cmake  libxc.cmake  madness.cmake  mpi.cmake  tbb.cmake
cmake/: Makefile
cmake/modules/: FindEigen.cmake  FindMKL.cmake
